--- a/views/index.jade
+++ b/views/index.jade
@@ -17,9 +17,9 @@ block content
                     li
                         a.page-scroll(href='#about') About
                     li
-                        a.page-scroll(href='#services') Services
+                        a.page-scroll(href='#services') Why us?
                     li
-                        a.page-scroll(href='#portfolio') Portfolio
+                        a.page-scroll(href='#portfolio') Phones
                     li
                         a.page-scroll(href='#contact') Contact
             // /.navbar-collapse
@@ -30,47 +30,47 @@ block content
                 h1 Buying pre-owned phones just got whole lot easier
                 hr
                 p
-                    | Fourfax will help you buy pre-loved phones with trust and assurance. We take care of everything right from robust inspection to doorstep delivery along with tracking.
+                    | Fourfax will help you buy pre-loved phones with trust and assurance. We take care of everything right from robust inspection to doorstep delivery.
                 a.btn.btn-primary.btn-xl.page-scroll(href='#about') Find Out More
     section#about.bg-primary
         .container
             .row
                 .col-lg-8.col-lg-offset-2.text-center
-                    h2.section-heading We&apos;ve got what you need!
+                    h2.section-heading Coming soon!
                     hr.light
                     p.text-faded
-                        | It cannot get any more easier than this. Give us a call and we&apos;ll take right from there. No strings attached! In case you do not like anything, we have 5 days cashback gurantee. What more could you ask for?
-                    a.btn.btn-default.btn-xl(href='#') Buy Now!
+                        | Planning to buy a phone? That's great. Sign up with your details below and we'll keep you posted.
+                    a.btn.btn-default.btn-xl(href='#') Sign up!
     section#services
         .container
             .row
                 .col-lg-12.text-center
-                    h2.section-heading At Your Service
+                    h2.section-heading Our Advantages
                     hr.primary
         .container
             .row
-                .col-lg-3.col-md-6.text-center
+                .col-lg-4.col-md-6.text-center
                     .service-box
                         i.fa.fa-4x.fa-diamond.wow.bounceIn.text-primary
                         h3 Inspected Phones
-                        p.text-muted Our world class inspection methodology ensures only the best phones get through.
-                .col-lg-3.col-md-6.text-center
+                        p.text-muted Our robust inspection methodology ensures only best phones get through to you.
+                .col-lg-4.col-md-6.text-center
                     .service-box
                         i.fa.fa-4x.fa-paper-plane.wow.bounceIn.text-primary(data-wow-delay='.1s')
-                        h3 Free shipping
+                        h3 You order, we deliver
                         p.text-muted
-                            | Everything from the point your order is taken care by us while you enjoy your coffee.
-                .col-lg-3.col-md-6.text-center
+                            | High quality packaging and handling to ensure you receive your phone as good as new.
+                .col-lg-4.col-md-6.text-center
                     .service-box
                         i.fa.fa-4x.fa-newspaper-o.wow.bounceIn.text-primary(data-wow-delay='.2s')
-                        h3 Unconditional Support
+                        h3  At your service
                         p.text-muted
                             | We take full responsibilty of all our phones upto 6 months from the date of purchase.
-                .col-lg-3.col-md-6.text-center
-                    .service-box
-                        i.fa.fa-4x.fa-heart.wow.bounceIn.text-primary(data-wow-delay='.3s')
-                        h3 Made with Love
-                        p.text-muted We love listening. Let us know if we can do anything better.
+                //.col-lg-3.col-md-6.text-center
+                //    .service-box
+                //        i.fa.fa-4x.fa-heart.wow.bounceIn.text-primary(data-wow-delay='.3s')
+                //        h3 Made with Love
+                //        p.text-muted We love listening. Let us know if we can do anything better.
     section#portfolio.no-padding
         .container-fluid
             .row.no-gutter
@@ -128,11 +128,11 @@ block content
                                     | Category
                                 .project-name
                                     | Project Name
-    aside.bg-dark
-        .container.text-center
-            .call-to-action
-                h2 Want to sell pre-owned phones!
-                a.btn.btn-default.btn-xl.wow.tada(href='#') Sell Now!
+    //aside.bg-dark
+    //    .container.text-center
+    //        .call-to-action
+    //            h2 Want to sell pre-owned phones!
+    //            a.btn.btn-default.btn-xl.wow.tada(href='#') Sell Now!
     section#contact
         .container
             .row
@@ -140,7 +140,7 @@ block content
                     h2.section-heading Let&apos;s Get In Touch!
                     hr.primary
                     p
-                        | Ready to buy pre-owned phones? That&apos;s great. In case you have any questions, call us or write to us and we&apos;ll get back right back to you. Happy Fourfax-ing!
+                        | Still have doubts? Not a problem. Call us or write to us and we&apos;ll get back to you. Happy Fourfax-ing!
                 .col-lg-4.col-lg-offset-2.text-center
                     i.fa.fa-phone.fa-3x.wow.bounceIn
                     p +91-720-88-60-655
