Minor changes to landing page

--- a/views/index.jade
+++ b/views/index.jade
@@ -27,7 +27,7 @@ block content
     header
         .header-content
             .header-content-inner
-                h1 Buying pre-owned phones just got whole lot easier
+                h1 Pre-owned phones as good as new
                 hr
                 p
                     | Fourfax will help you buy pre-loved phones with trust and assurance. We take care of everything right from robust inspection to doorstep delivery.
@@ -71,63 +71,63 @@ block content
                 //        i.fa.fa-4x.fa-heart.wow.bounceIn.text-primary(data-wow-delay='.3s')
                 //        h3 Made with Love
                 //        p.text-muted We love listening. Let us know if we can do anything better.
-    section#portfolio.no-padding
-        .container-fluid
-            .row.no-gutter
-                .col-lg-4.col-sm-6
-                    a.portfolio-box(href='#')
-                        img.img-responsive(src='img/portfolio/1.jpg', alt='')
-                        .portfolio-box-caption
-                            .portfolio-box-caption-content
-                                .project-category.text-faded
-                                    | Category
-                                .project-name
-                                    | Project Name
-                .col-lg-4.col-sm-6
-                    a.portfolio-box(href='#')
-                        img.img-responsive(src='img/portfolio/2.jpg', alt='')
-                        .portfolio-box-caption
-                            .portfolio-box-caption-content
-                                .project-category.text-faded
-                                    | Category
-                                .project-name
-                                    | Project Name
-                .col-lg-4.col-sm-6
-                    a.portfolio-box(href='#')
-                        img.img-responsive(src='img/portfolio/3.jpg', alt='')
-                        .portfolio-box-caption
-                            .portfolio-box-caption-content
-                                .project-category.text-faded
-                                    | Category
-                                .project-name
-                                    | Project Name
-                .col-lg-4.col-sm-6
-                    a.portfolio-box(href='#')
-                        img.img-responsive(src='img/portfolio/4.jpg', alt='')
-                        .portfolio-box-caption
-                            .portfolio-box-caption-content
-                                .project-category.text-faded
-                                    | Category
-                                .project-name
-                                    | Project Name
-                .col-lg-4.col-sm-6
-                    a.portfolio-box(href='#')
-                        img.img-responsive(src='img/portfolio/5.jpg', alt='')
-                        .portfolio-box-caption
-                            .portfolio-box-caption-content
-                                .project-category.text-faded
-                                    | Category
-                                .project-name
-                                    | Project Name
-                .col-lg-4.col-sm-6
-                    a.portfolio-box(href='#')
-                        img.img-responsive(src='img/portfolio/6.jpg', alt='')
-                        .portfolio-box-caption
-                            .portfolio-box-caption-content
-                                .project-category.text-faded
-                                    | Category
-                                .project-name
-                                    | Project Name
+    //section#portfolio.no-padding
+    //    .container-fluid
+    //        .row.no-gutter
+    //            .col-lg-4.col-sm-6
+    //                a.portfolio-box(href='#')
+    //                    img.img-responsive(src='img/portfolio/1.jpg', alt='')
+    //                    .portfolio-box-caption
+    //                        .portfolio-box-caption-content
+    //                            .project-category.text-faded
+    //                                | Category
+    //                            .project-name
+    //                                | Project Name
+    //            .col-lg-4.col-sm-6
+    //                a.portfolio-box(href='#')
+    //                    img.img-responsive(src='img/portfolio/2.jpg', alt='')
+    //                    .portfolio-box-caption
+    //                        .portfolio-box-caption-content
+    //                            .project-category.text-faded
+    //                                | Category
+    //                            .project-name
+    //                                | Project Name
+    //            .col-lg-4.col-sm-6
+    //                a.portfolio-box(href='#')
+    //                    img.img-responsive(src='img/portfolio/3.jpg', alt='')
+    //                    .portfolio-box-caption
+    //                        .portfolio-box-caption-content
+    //                            .project-category.text-faded
+    //                                | Category
+    //                            .project-name
+    //                                | Project Name
+    //            .col-lg-4.col-sm-6
+    //                a.portfolio-box(href='#')
+    //                    img.img-responsive(src='img/portfolio/4.jpg', alt='')
+    //                    .portfolio-box-caption
+    //                        .portfolio-box-caption-content
+    //                            .project-category.text-faded
+    //                                | Category
+    //                            .project-name
+    //                                | Project Name
+    //            .col-lg-4.col-sm-6
+    //                a.portfolio-box(href='#')
+    //                    img.img-responsive(src='img/portfolio/5.jpg', alt='')
+    //                    .portfolio-box-caption
+    //                        .portfolio-box-caption-content
+    //                            .project-category.text-faded
+    //                                | Category
+    //                            .project-name
+    //                                | Project Name
+    //            .col-lg-4.col-sm-6
+    //                a.portfolio-box(href='#')
+    //                    img.img-responsive(src='img/portfolio/6.jpg', alt='')
+    //                    .portfolio-box-caption
+    //                        .portfolio-box-caption-content
+    //                            .project-category.text-faded
+    //                                | Category
+    //                            .project-name
+    //                                | Project Name
     //aside.bg-dark
     //    .container.text-center
     //        .call-to-action
