Minor text changes index.jade

--- a/views/index.jade
+++ b/views/index.jade
@@ -15,10 +15,10 @@ block content
             #bs-example-navbar-collapse-1.collapse.navbar-collapse
                 ul.nav.navbar-nav.navbar-right
                     li
-                        a.page-scroll(href='#about') About
+                        a.page-scroll(href='#about') Coming Soon
                     li
                         a.page-scroll(href='#services') Why us?
-                    li
+                    //li
                         a.page-scroll(href='#portfolio') Phones
                     li
                         a.page-scroll(href='#contact') Contact
@@ -27,20 +27,11 @@ block content
     header
         .header-content
             .header-content-inner
-                h1 Pre-owned phones as good as new
+                h1 Pre-owned phones. Inspected for quality. Always at your service.
                 hr
                 p
                     | Fourfax will help you buy pre-loved phones with trust and assurance. We take care of everything right from robust inspection to doorstep delivery.
                 a.btn.btn-primary.btn-xl.page-scroll(href='#about') Find Out More
-    section#about.bg-primary
-        .container
-            .row
-                .col-lg-8.col-lg-offset-2.text-center
-                    h2.section-heading Coming soon!
-                    hr.light
-                    p.text-faded
-                        | Planning to buy a phone? That's great. Sign up with your details below and we'll keep you posted.
-                    a.btn.btn-default.btn-xl(href='#') Sign up!
     section#services
         .container
             .row
@@ -70,7 +61,16 @@ block content
                 //    .service-box
                 //        i.fa.fa-4x.fa-heart.wow.bounceIn.text-primary(data-wow-delay='.3s')
                 //        h3 Made with Love
-                //        p.text-muted We love listening. Let us know if we can do anything better.
+                //        p.text-muted We love listening. Let us know if we can do anything better
+    section#about.bg-primary
+        .container
+            .row
+                .col-lg-8.col-lg-offset-2.text-center
+                    h2.section-heading Coming soon!
+                    hr.light
+                    p.text-faded
+                        | Planning to buy a phone? That's great. Sign up with your details below and we'll keep you posted.
+                    a.btn.btn-default.btn-xl(href='#') Sign up!
     //section#portfolio.no-padding
     //    .container-fluid
     //        .row.no-gutter
